# slap-your-laptop

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md  release-please-config.json
.github/workflows/: release-please.yml
src/: config.rs  main.rs  shared.rs
src/audio/: mod.rs  pack.rs  player.rs  tracker.rs
src/mcp/: server.rs
