[package]
name = "slap-your-laptop"
version = "0.1.4"
edition = "2021"
description = "slap-your-laptop - Detect MacBook slaps and shakes via built-in accelerometer"
license = "MIT"

[[bin]]
name = "slap-your-laptop"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.17", features = ["mp3"] }
rand = "0.8"
include_dir = "0.7"

[build-dependencies]
cc = "1"
